--- a/lAWANIYA.ipynb
+++ b/lAWANIYA.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPGhDfSY1HqHz31oilDA5n8",
+      "authorship_tag": "ABX9TyO+A72m3cZR7ErKXMTohGq+",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1670,38 +1670,22 @@
         "for b in range(1,a+1):\n",
         "  fact=fact*b\n",
         "  sum=sum+fact\n",
-        "  print(fact)\n",
-        "  print(sum)\n"
+        "print(fact)\n",
+        "print(sum)\n"
       ],
       "metadata": {
         "id": "bCXEtIpSxZfR",
-        "outputId": "07f46ca4-4707-4383-a3fc-e4e50d099a27",
+        "outputId": "5907616f-f171-480d-c60f-9983c0204c7d",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": null,
+      "execution_count": 22,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "1\n",
-            "1\n",
-            "2\n",
-            "3\n",
-            "6\n",
-            "9\n",
-            "24\n",
-            "33\n",
-            "120\n",
-            "153\n",
-            "720\n",
-            "873\n",
-            "5040\n",
-            "5913\n",
-            "40320\n",
-            "46233\n",
             "362880\n",
             "409113\n"
           ]
@@ -1724,11 +1708,11 @@
         "print(fact)"
       ],
       "metadata": {
-        "id": "_K2eEv2A4kqT",
-        "outputId": "df1b7386-7c66-4d7c-c208-326b14162b5a",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "_K2eEv2A4kqT",
+        "outputId": "df1b7386-7c66-4d7c-c208-326b14162b5a"
       },
       "execution_count": 9,
       "outputs": [
@@ -1750,28 +1734,28 @@
         "for c in range(14,27,6):\n",
         "  fact=1\n",
         "  for d in range(1,c+1):\n",
-        "     fact=fact*c\n",
+        "     fact=fact*d\n",
         "  sum2=sum2+fact\n",
         "print(fact)\n",
         "print(sum2)\n",
         "print(sum1+sum2)"
       ],
       "metadata": {
-        "id": "FocOHHR4709R",
-        "outputId": "044a9091-a315-4eae-9ae6-61b8d38223c4",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "FocOHHR4709R",
+        "outputId": "97c92ca1-bf8c-4732-f4e7-2bdad686e7cf"
       },
-      "execution_count": 21,
+      "execution_count": 23,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "6156119580207157310796674288400203776\n",
-            "6156119580312014910807786295225761792\n",
-            "6156119580312014910807786301452822918\n"
+            "403291461126605635584000000\n",
+            "403291463559507730938931200\n",
+            "403291463559507737165992326\n"
           ]
         }
       ]
