--- a/lAWANIYA.ipynb
+++ b/lAWANIYA.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyO+A72m3cZR7ErKXMTohGq+",
+      "authorship_tag": "ABX9TyPQyQcIG+lI2gSZeTxIwwyA",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1483,7 +1483,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1527,7 +1527,76 @@
     {
       "cell_type": "code",
       "source": [
+        "#1!+3!+5!+7!\n",
+        "sum="
+      ],
+      "metadata": {
+        "id": "zxE6fKmW4dyF"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "fact=1\n",
+        "for i in range(1,6):\n",
+        "  fact=fact*i\n",
+        "print(fact)"
+      ],
+      "metadata": {
+        "id": "en6KUNRJzxE3",
+        "outputId": "08062d16-b63a-4b79-f59a-64728cc98e52",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 2,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "120\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "fact=1\n",
+        "sum=0\n",
+        "for i in range(1,6):\n",
+        "  fact=fact*i\n",
+        "  sum=sum+fact\n",
+        "print(fact)\n",
+        "print(sum)"
+      ],
+      "metadata": {
+        "id": "WUEinQKB0uTE",
+        "outputId": "618f0acd-d22c-4a74-d16d-ecada240ba70",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 4,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "120\n",
+            "153\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
         "#fabonaccai\n",
+        "#first term=0 second term=1 is always fix\n",
         "first_term=0\n",
         "second_term=1\n",
         "print(first_term)\n",
@@ -1680,7 +1749,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 22,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1714,7 +1783,7 @@
         "id": "_K2eEv2A4kqT",
         "outputId": "df1b7386-7c66-4d7c-c208-326b14162b5a"
       },
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1747,7 +1816,7 @@
         "id": "FocOHHR4709R",
         "outputId": "97c92ca1-bf8c-4732-f4e7-2bdad686e7cf"
       },
-      "execution_count": 23,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1759,6 +1828,222 @@
           ]
         }
       ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#1!+3!+5!+7!\n",
+        "sum=0\n",
+        "for i in range(1,8,2):\n",
+        "  fact=1\n",
+        "  for j in range(1,i+1):\n",
+        "    fact=fact*j\n",
+        "  sum=sum+fact\n",
+        "print(fact)\n",
+        "print(sum)\n"
+      ],
+      "metadata": {
+        "id": "d358VEI_4s9Q",
+        "outputId": "a254c33f-60df-4717-f734-af007322cc9c",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 7,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "5040\n",
+            "5167\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "sum=0\n",
+        "fact=1\n",
+        "for i in range(1,8):\n",
+        "  fact=fact*i\n",
+        "  if i % 2 != 0:\n",
+        "    sum=sum+fact\n",
+        "print(fact)\n",
+        "print(sum)\n"
+      ],
+      "metadata": {
+        "id": "0H2P-6Qo7Q3p",
+        "outputId": "6056da79-f84d-4057-d004-1f0cc40035fb",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 13,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "5040\n",
+            "5167\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#1!+5!+9!=?\n",
+        "sum=0\n",
+        "fact=1\n",
+        "for i in range(1,10):\n",
+        "  fact=fact*i\n",
+        "  if i % 4==1:\n",
+        "   sum=fact+sum\n",
+        "print(fact)\n",
+        "print(sum)\n"
+      ],
+      "metadata": {
+        "id": "iNijJf5h9SFJ",
+        "outputId": "14af7774-ef94-49fa-c0ba-89625893f599",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 24,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "362880\n",
+            "363001\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "sum=0\n",
+        "for i in range(1,10,4):\n",
+        "  fact=1\n",
+        "  for j in range(1,i+1):\n",
+        "    fact=fact*j\n",
+        "  sum=sum+fact\n",
+        "print(fact)\n",
+        "print(sum)\n"
+      ],
+      "metadata": {
+        "id": "IpmV6h-_ARiq",
+        "outputId": "903485e8-f1bc-4ebc-8e92-a908c3018a83",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 23,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "362880\n",
+            "363001\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#2!+4!+6!+8!=?\n",
+        "sum=0\n",
+        "for i in range(0,11,2):\n",
+        "  fact=1\n",
+        "  for j in range(1,i+1):\n",
+        "    fact=fact*j\n",
+        "  sum=sum+fact\n",
+        "print(fact)\n",
+        "print(sum)\n"
+      ],
+      "metadata": {
+        "id": "7l61pe-V6Gac",
+        "outputId": "23646425-a1ff-467c-b3aa-0848f587394b",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 8,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "3628800\n",
+            "3669867\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#1!+5!+9!+2!+6!+10!=?\n",
+        "#1!+5!+9!=?\n",
+        "sum1=0\n",
+        "for i in range(1,10,4):\n",
+        "  fact=1\n",
+        "  for j in range(1,i+1):\n",
+        "    fact=fact*j\n",
+        "  sum1=sum1+fact\n",
+        "print(fact)\n",
+        "print(sum1)\n",
+        "print(\"____________\")\n",
+        "#2!+6!+10!=?\n",
+        "sum2=0\n",
+        "for i in range(2,11,4):\n",
+        "  fact=1\n",
+        "  for j in range(1,i+1):\n",
+        "    fact=fact*j\n",
+        "  sum2=sum2+fact\n",
+        "print(fact)\n",
+        "print(sum2)\n",
+        "print(sum+sum2)\n",
+        ""
+      ],
+      "metadata": {
+        "id": "GO2_UL6s7P0i",
+        "outputId": "22dee9bc-bab2-4b7f-ea17-baaf8ec0576d",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 31,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "362880\n",
+            "363001\n",
+            "____________\n",
+            "3628800\n",
+            "3629522\n",
+            "3992523\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "ihpVpX9rBpxd"
+      },
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
