--- a/lAWANIYA.ipynb
+++ b/lAWANIYA.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPQyQcIG+lI2gSZeTxIwwyA",
+      "authorship_tag": "ABX9TyMobmLulDDYPSU8YmeN31O/",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1551,7 +1551,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1580,7 +1580,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1849,7 +1849,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1880,7 +1880,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1912,7 +1912,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 24,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1943,7 +1943,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 23,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1975,7 +1975,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2010,17 +2010,16 @@
         "  sum2=sum2+fact\n",
         "print(fact)\n",
         "print(sum2)\n",
-        "print(sum+sum2)\n",
-        ""
+        "print(sum1+sum2)\n"
       ],
       "metadata": {
         "id": "GO2_UL6s7P0i",
-        "outputId": "22dee9bc-bab2-4b7f-ea17-baaf8ec0576d",
+        "outputId": "4f183cca-74f2-4cb2-b039-d7af16778e34",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 31,
+      "execution_count": 34,
       "outputs": [
         {
           "output_type": "stream",
