--- a/lAWANIYA.ipynb
+++ b/lAWANIYA.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMobmLulDDYPSU8YmeN31O/",
+      "authorship_tag": "ABX9TyMQf6fAhSCdgEW/+5Yk2cuB",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -2019,7 +2019,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 34,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2037,12 +2037,68 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "a=5\n",
+        "b=15\n",
+        "if a>b:\n",
+        "  smallest=b\n",
+        "else:\n",
+        "  smallest=a\n",
+        "for i in range(1,smallest+1):\n",
+        " if a % i==0 and b % i==0:\n",
+        "  hcf=i\n",
+        "print(hcf)\n"
+      ],
       "metadata": {
-        "id": "ihpVpX9rBpxd"
+        "id": "ihpVpX9rBpxd",
+        "outputId": "63e0bfdf-a567-4402-d76b-10b273af35f2",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 7,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "5\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "a=10\n",
+        "b=20\n",
+        "if a>b:\n",
+        "  big=a\n",
+        "else:\n",
+        "  big=b\n",
+        "for i in range(big,a*b+1):\n",
+        "  if i % a==0 and i % b==0:\n",
+        "    lcm=i\n",
+        "    break\n",
+        "print(lcm)"
+      ],
+      "metadata": {
+        "id": "aoqyCp9ZYkLc",
+        "outputId": "ba5d0ce1-b9ff-4036-a085-988a2d06a03b",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 10,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "20\n"
+          ]
+        }
+      ]
     }
   ]
 }
