--- a/lAWANIYA.ipynb
+++ b/lAWANIYA.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMQf6fAhSCdgEW/+5Yk2cuB",
+      "authorship_tag": "ABX9TyMk73RJsGDBvR0vKk3crt1/",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1960,7 +1960,7 @@
       "source": [
         "#2!+4!+6!+8!=?\n",
         "sum=0\n",
-        "for i in range(0,11,2):\n",
+        "for i in range(0,9,2):\n",
         "  fact=1\n",
         "  for j in range(1,i+1):\n",
         "    fact=fact*j\n",
@@ -1970,19 +1970,19 @@
       ],
       "metadata": {
         "id": "7l61pe-V6Gac",
-        "outputId": "23646425-a1ff-467c-b3aa-0848f587394b",
+        "outputId": "c3de0e0f-cda7-4678-df57-24278c3bfa94",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": null,
+      "execution_count": 10,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "3628800\n",
-            "3669867\n"
+            "40320\n",
+            "41067\n"
           ]
         }
       ]
@@ -2051,12 +2051,12 @@
       ],
       "metadata": {
         "id": "ihpVpX9rBpxd",
-        "outputId": "63e0bfdf-a567-4402-d76b-10b273af35f2",
+        "outputId": "6ace3803-252b-4b4e-88ae-d5b5e3fcdab0",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 7,
+      "execution_count": 13,
       "outputs": [
         {
           "output_type": "stream",
@@ -2089,13 +2089,191 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
             "20\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#while loop\n",
+        "n=5\n",
+        "while n>0:\n",
+        "  print(n)\n",
+        "  n=n-1\n"
+      ],
+      "metadata": {
+        "id": "5IeD5Vc6ZUJd",
+        "outputId": "90c29eed-e928-4f1b-a46e-6cb7d5995292",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 1,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "5\n",
+            "4\n",
+            "3\n",
+            "2\n",
+            "1\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "n=5\n",
+        "while n<=8:\n",
+        "  print(n)\n",
+        "  n=n+1\n"
+      ],
+      "metadata": {
+        "id": "3WCaNDbpaq5u",
+        "outputId": "55907750-2cb9-4b13-d43a-5da6e6a75fc2",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 8,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "5\n",
+            "6\n",
+            "7\n",
+            "8\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "n=7\n",
+        "while n<=10:\n",
+        "  print(n)\n",
+        "  n=n+1"
+      ],
+      "metadata": {
+        "id": "StesGxuTbAcW",
+        "outputId": "1b2cf51d-e809-4a88-a6aa-97e532c382b7",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 9,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "7\n",
+            "8\n",
+            "9\n",
+            "10\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "num=12345\n",
+        "while num>0:\n",
+        "  digit=num%10\n",
+        "  num=num//10\n",
+        "  print(digit)"
+      ],
+      "metadata": {
+        "id": "EGaFXggbhVvJ",
+        "outputId": "fe8dbec0-2551-4e7b-9de3-549d781352db",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 23,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "5\n",
+            "4\n",
+            "3\n",
+            "2\n",
+            "1\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "num=68321\n",
+        "reverse=0\n",
+        "while num>0:\n",
+        "  digit=num%10\n",
+        "  reverse=reverse*10+digit\n",
+        "  num=num//10\n",
+        "print(reverse)"
+      ],
+      "metadata": {
+        "id": "ePZRotahkvPs",
+        "outputId": "f9349717-ca92-4a52-bc32-8b77551d5699",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 38,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "12386\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "num=54321\n",
+        "rev=0\n",
+        "while num>0:\n",
+        "  digit=num%10\n",
+        "  rev=rev*10+digit\n",
+        "  num=num//10\n",
+        "print(rev)"
+      ],
+      "metadata": {
+        "id": "H2po9j4hnXcS",
+        "outputId": "899f64ee-8ac8-4ebf-bb56-9061eae017fb",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 40,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "12345\n"
           ]
         }
       ]
