--- a/lAWANIYA.ipynb
+++ b/lAWANIYA.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMk73RJsGDBvR0vKk3crt1/",
+      "authorship_tag": "ABX9TyMnhQMm7wCXSrTaCpqKqiDe",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1975,7 +1975,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2056,7 +2056,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2116,7 +2116,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2146,7 +2146,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2175,7 +2175,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2205,7 +2205,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 23,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2238,7 +2238,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 38,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2267,7 +2267,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 40,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2277,6 +2277,59 @@
           ]
         }
       ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "num=1111\n",
+        "a=num\n",
+        "rev=0\n",
+        "while num>0:\n",
+        "  digit=num%10\n",
+        "  rev=rev*10+digit\n",
+        "  num=num//10\n",
+        "print(rev)\n",
+        "\n",
+        "if a==rev:\n",
+        "  print(\"pallin drome\")\n",
+        "else:\n",
+        "  print(\"no pallin drome\")\n",
+        ""
+      ],
+      "metadata": {
+        "id": "H3OeEydLmXmZ",
+        "outputId": "c980eb8e-a70c-4080-f374-8ecbee6b1324",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 15,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "1111\n",
+            "pallin drome\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "num=1\n",
+        "Sum=0\n",
+        "while num<=20:\n",
+        "  num=num+1\n",
+        "  sum=num+sum\n",
+        "print(sum)"
+      ],
+      "metadata": {
+        "id": "dxCnMP64rzNh"
+      },
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
