--- a/lAWANIYA.ipynb
+++ b/lAWANIYA.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMnhQMm7wCXSrTaCpqKqiDe",
+      "authorship_tag": "ABX9TyPyAW9iF9oIwYz5ftU5JdCp",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -2293,8 +2293,7 @@
         "if a==rev:\n",
         "  print(\"pallin drome\")\n",
         "else:\n",
-        "  print(\"no pallin drome\")\n",
-        ""
+        "  print(\"no pallin drome\")\n"
       ],
       "metadata": {
         "id": "H3OeEydLmXmZ",
@@ -2303,7 +2302,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 15,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2318,15 +2317,15 @@
     {
       "cell_type": "code",
       "source": [
-        "num=1\n",
-        "Sum=0\n",
-        "while num<=20:\n",
+        "num=5\n",
+        "sum=0\n",
+        "while num<=25:\n",
         "  num=num+1\n",
-        "  sum=num+sum\n",
-        "print(sum)"
+        "  sum=sum+num\n",
+        "print(sum)\n"
       ],
       "metadata": {
-        "id": "dxCnMP64rzNh"
+        "id": "C_Ucy6Gkv7dM"
       },
       "execution_count": null,
       "outputs": []
