--- a/lAWANIYA.ipynb
+++ b/lAWANIYA.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPyAW9iF9oIwYz5ftU5JdCp",
+      "authorship_tag": "ABX9TyMqBZiHsAd/JfPquYaYNYn8",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -28,13 +28,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 1,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "fTjQFk-_IMSu",
-        "outputId": "81585f41-ef7b-4c10-a0f8-2fc1f6e8bcf0"
+        "outputId": "ecc1a948-18fa-488f-d4b0-e5bd51acdabf"
       },
       "outputs": [
         {
@@ -2317,18 +2317,75 @@
     {
       "cell_type": "code",
       "source": [
+        "#while loop for 5 to 25\n",
         "num=5\n",
         "sum=0\n",
         "while num<=25:\n",
-        "  num=num+1\n",
         "  sum=sum+num\n",
+        "  num=num+1\n",
         "print(sum)\n"
       ],
       "metadata": {
-        "id": "C_Ucy6Gkv7dM"
+        "id": "C_Ucy6Gkv7dM",
+        "outputId": "5e033d92-3a38-47eb-81d3-8dcc8c5777a7",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 5,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "315\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#while loop for 20 table\n",
+        "a=1\n",
+        "sum=0\n",
+        "n=20\n",
+        "while a<=10:\n",
+        "  t=n*a\n",
+        "  a=a+1\n",
+        "  print(t)\n",
+        "  sum=sum+t\n",
+        "print(sum)\n",
+        "\n",
+        "\n"
+      ],
+      "metadata": {
+        "id": "SUdVzbm40CF3",
+        "outputId": "efe6d2c0-1d65-40d6-d48d-c18c75a71ed6",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 21,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "20\n",
+            "40\n",
+            "60\n",
+            "80\n",
+            "100\n",
+            "120\n",
+            "140\n",
+            "160\n",
+            "180\n",
+            "200\n",
+            "1100\n"
+          ]
+        }
+      ]
     }
   ]
 }
