--- a/lAWANIYA.ipynb
+++ b/lAWANIYA.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMqBZiHsAd/JfPquYaYNYn8",
+      "authorship_tag": "ABX9TyNwarN3ClZsHEQBNSjY2wCy",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -28,7 +28,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -1391,12 +1391,12 @@
       ],
       "metadata": {
         "id": "A6rzhaZ6uFzT",
-        "outputId": "e726aedd-f72c-4303-a985-f128949158fa",
+        "outputId": "4f153699-f016-4164-b174-54d0f6176a45",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": null,
+      "execution_count": 15,
       "outputs": [
         {
           "output_type": "stream",
@@ -1413,25 +1413,21 @@
         "sum=0\n",
         "for i in range(1,11,2):\n",
         "  sum=sum+i\n",
-        "  print(sum)"
+        "print(sum)"
       ],
       "metadata": {
         "id": "Gy7C4Ijvv9ZS",
-        "outputId": "18019567-161f-4a8e-fdd1-0c9f8bf42329",
+        "outputId": "99925cb7-c44a-4def-f5b7-a727f8d61258",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": null,
+      "execution_count": 16,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "1\n",
-            "4\n",
-            "9\n",
-            "16\n",
             "25\n"
           ]
         }
@@ -1528,13 +1524,39 @@
       "cell_type": "code",
       "source": [
         "#1!+3!+5!+7!\n",
-        "sum="
+        "sum=0\n",
+        "for i in range(1,8,2):\n",
+        "  factorial=1\n",
+        "  for j in range(1,i+1):\n",
+        "    factorial=factorial*j\n",
+        "  sum=sum+factorial\n",
+        "  print(sum)\n",
+        "  print(factorial)\n"
       ],
       "metadata": {
-        "id": "zxE6fKmW4dyF"
+        "id": "zxE6fKmW4dyF",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "64790a0b-bd56-408d-feaa-9539b2a4190f"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 8,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "1\n",
+            "1\n",
+            "7\n",
+            "6\n",
+            "127\n",
+            "120\n",
+            "5167\n",
+            "5040\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
@@ -1595,7 +1617,7 @@
     {
       "cell_type": "code",
       "source": [
-        "#fabonaccai\n",
+        "#fibonacci\n",
         "#first term=0 second term=1 is always fix\n",
         "first_term=0\n",
         "second_term=1\n",
@@ -2038,6 +2060,7 @@
     {
       "cell_type": "code",
       "source": [
+        "#for loop for hcf\n",
         "a=5\n",
         "b=15\n",
         "if a>b:\n",
@@ -2070,6 +2093,7 @@
     {
       "cell_type": "code",
       "source": [
+        "#for loop for lcm (product of two number is equal to its lcm and hcf, for example:see refer number 7)\n",
         "a=10\n",
         "b=20\n",
         "if a>b:\n",
@@ -2332,13 +2356,42 @@
         },
         "outputId": "5e033d92-3a38-47eb-81d3-8dcc8c5777a7"
       },
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
             "315\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#while loop for sum of 10 to 20 numbers\n",
+        "n=10\n",
+        "sum=0\n",
+        "while n<=20:\n",
+        "  sum=sum+n\n",
+        "  n=n+1\n",
+        "print(sum)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "bHioQOMMLvKz",
+        "outputId": "b3fefd8f-23af-40f3-9f14-f7da272d4633"
+      },
+      "execution_count": 19,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "165\n"
           ]
         }
       ]
@@ -2366,7 +2419,7 @@
         "id": "SUdVzbm40CF3",
         "outputId": "efe6d2c0-1d65-40d6-d48d-c18c75a71ed6"
       },
-      "execution_count": 21,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2383,6 +2436,85 @@
             "180\n",
             "200\n",
             "1100\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# while loop for table of 12\n",
+        "n=1\n",
+        "table=12\n",
+        "while n<=10:\n",
+        "  d=table*n\n",
+        "  n=n+1\n",
+        "  print(d)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "p7FRWhYnMnMn",
+        "outputId": "47591bff-7ffe-466a-a142-ba43d32780df"
+      },
+      "execution_count": 26,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "12\n",
+            "24\n",
+            "36\n",
+            "48\n",
+            "60\n",
+            "72\n",
+            "84\n",
+            "96\n",
+            "108\n",
+            "120\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "n=1\n",
+        "t=12\n",
+        "sum=0\n",
+        "while n<=10:\n",
+        "  o=t*n\n",
+        "  n=n+1\n",
+        "  print(o)\n",
+        "  sum=sum+o\n",
+        "print(sum)\n"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "sCPtEtoxOcxF",
+        "outputId": "78381814-3281-4da3-9159-30d5c2796724"
+      },
+      "execution_count": 33,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "12\n",
+            "24\n",
+            "36\n",
+            "48\n",
+            "60\n",
+            "72\n",
+            "84\n",
+            "96\n",
+            "108\n",
+            "120\n",
+            "660\n"
           ]
         }
       ]
