--- a/lAWANIYA.ipynb
+++ b/lAWANIYA.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNwarN3ClZsHEQBNSjY2wCy",
+      "authorship_tag": "ABX9TyMjlXN8X9E3XbRLdmqwrmZf",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1396,7 +1396,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 15,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1422,7 +1422,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 16,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1540,7 +1540,7 @@
         },
         "outputId": "64790a0b-bd56-408d-feaa-9539b2a4190f"
       },
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2385,7 +2385,7 @@
         "id": "bHioQOMMLvKz",
         "outputId": "b3fefd8f-23af-40f3-9f14-f7da272d4633"
       },
-      "execution_count": 19,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2458,7 +2458,7 @@
         "id": "p7FRWhYnMnMn",
         "outputId": "47591bff-7ffe-466a-a142-ba43d32780df"
       },
-      "execution_count": 26,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2498,7 +2498,7 @@
         "id": "sCPtEtoxOcxF",
         "outputId": "78381814-3281-4da3-9159-30d5c2796724"
       },
-      "execution_count": 33,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2518,6 +2518,84 @@
           ]
         }
       ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "n=1\n",
+        "sum1=0\n",
+        "t1=19\n",
+        "while n<=10:\n",
+        "  s1=t1*n\n",
+        "  n=n+1\n",
+        "  print(s1)\n",
+        "  sum1=sum1+s1\n",
+        "print(sum1)\n",
+        "n=1\n",
+        "sum2=0\n",
+        "t2=20\n",
+        "while n<=10:\n",
+        "  s2=n*t2\n",
+        "  n=n+1\n",
+        "  print(s2)\n",
+        "  sum2=sum2+s2\n",
+        "print(sum2)\n",
+        "total=sum1+sum2\n",
+        "print(total)\n",
+        "average=total/20\n",
+        "print(average)"
+      ],
+      "metadata": {
+        "id": "Res4ydmL2hwG",
+        "outputId": "b5e0c950-51aa-474c-81c9-bb2a9a17663b",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 22,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "19\n",
+            "38\n",
+            "57\n",
+            "76\n",
+            "95\n",
+            "114\n",
+            "133\n",
+            "152\n",
+            "171\n",
+            "190\n",
+            "1045\n",
+            "20\n",
+            "40\n",
+            "60\n",
+            "80\n",
+            "100\n",
+            "120\n",
+            "140\n",
+            "160\n",
+            "180\n",
+            "200\n",
+            "1100\n",
+            "2145\n",
+            "107.25\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#string (forward and negative indexing)"
+      ],
+      "metadata": {
+        "id": "f_R364JqAfZP"
+      },
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
