--- a/lAWANIYA.ipynb
+++ b/lAWANIYA.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMjlXN8X9E3XbRLdmqwrmZf",
+      "authorship_tag": "ABX9TyOOlN2ktZw0WRekpQ1S+Oyn",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -2552,7 +2552,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 22,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2589,13 +2589,119 @@
     {
       "cell_type": "code",
       "source": [
-        "#string (forward and negative indexing)"
+        "#forward or positive indexing\n",
+        "name=\"vaishnavi\"\n",
+        "print(name[3:6])\n",
+        "print(name[5])"
       ],
       "metadata": {
-        "id": "f_R364JqAfZP"
+        "id": "DGdTueJRjFqs",
+        "outputId": "b2adcb08-5aa2-4204-edf6-61b08e7c767c",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 28,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "shn\n",
+            "n\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#negative indexing\n",
+        "name=\"vaishnavi\"\n",
+        "print(name[-7])\n",
+        "print(name[-5:-2])"
+      ],
+      "metadata": {
+        "id": "N_xvx0yfjdX-",
+        "outputId": "cf20300e-20be-4102-fe8a-40a19562a571",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 30,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "i\n",
+            "hna\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "str=\"my name is vaishnavi\"\n",
+        "print(str.endswith(\"name\"))\n",
+        "print(str.capitalize())\n",
+        "print(str.replace(\"vaishnavi\",\"sharma\"))\n",
+        "print(str.find(\"a\"))\n",
+        "print(str.count(\"i\"))\n",
+        "print(str.upper())\n",
+        "print(str.lower())\n",
+        "print(str.title())"
+      ],
+      "metadata": {
+        "id": "oPCD8T7klggt",
+        "outputId": "02433c68-7bb5-4951-ebba-5141612d5f37",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 40,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "False\n",
+            "My name is vaishnavi\n",
+            "my name is sharma\n",
+            "4\n",
+            "3\n",
+            "MY NAME IS VAISHNAVI\n",
+            "my name is vaishnavi\n",
+            "My Name Is Vaishnavi\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "name=input(\"name=\")\n",
+        "print(\"name\",len(name))"
+      ],
+      "metadata": {
+        "id": "1IeXhfwWrAsZ",
+        "outputId": "8f310c2e-fc9f-4bcb-add6-b1ad12739292",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 46,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "name=vaishnavi\n",
+            "name 9\n"
+          ]
+        }
+      ]
     }
   ]
 }
