--- a/lAWANIYA.ipynb
+++ b/lAWANIYA.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOOlN2ktZw0WRekpQ1S+Oyn",
+      "authorship_tag": "ABX9TyMhYWN1MApUmOmyeQf47Rrg",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -2522,6 +2522,172 @@
     {
       "cell_type": "code",
       "source": [
+        "name=\"rajupaisalaya\"\n",
+        "print(name[1])\n",
+        "print(name[4:9])\n",
+        "print(name[9:12])\n",
+        "print(name[9:]) #in forward slicing we can leave the space empty instead of writing 13\n",
+        "x=\"tunemeragoldenchasmabecha\"\n",
+        "print(x[8:14])\n",
+        "print(x[8:20])\n",
+        "print(name[4:9]+x[8:20])\n",
+        "name=\"paisalaya\"\n",
+        "print(name[-6])\n",
+        "print(name[-7:-4])\n",
+        "print(name[-5:]) # same as positive indexing"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "aypyR2i0U58w",
+        "outputId": "41a9ee90-e132-4615-d976-651357ea6410"
+      },
+      "execution_count": 23,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "a\n",
+            "paisa\n",
+            "lay\n",
+            "laya\n",
+            "golden\n",
+            "goldenchasma\n",
+            "paisagoldenchasma\n",
+            "s\n",
+            "isa\n",
+            "alaya\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "x=\"maihoonkaun\"\n",
+        "print(x[3:7])\n",
+        "y=\"kaiseho\"\n",
+        "print(y[2:5])\n",
+        "z=\"kabhikabhi\"\n",
+        "print(z[0:5])\n",
+        "a=\"humhihumhai\"\n",
+        "print(a[-6:])\n",
+        "b=\"oyeraju\"\n",
+        "print(b[2:5])\n",
+        "print(y[2:5]+z[0:5])"
+      ],
+      "metadata": {
+        "id": "xko14xS3ivWg",
+        "outputId": "b68ba5d7-1a8c-444b-b03a-5a0e09bd8bcf",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 32,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "hoon\n",
+            "available\n",
+            "ise\n",
+            "kabhi\n",
+            "humhai\n",
+            "era\n",
+            "isekabhi\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "x=\"maihoonkaun\"\n",
+        "print(x[3:7])\n",
+        "if \"k\" in x:\n",
+        "  print(\"available\")\n",
+        "else:\n",
+        "  print(\"not available\")"
+      ],
+      "metadata": {
+        "id": "4JEolYg9lLle",
+        "outputId": "e890950d-7df1-48fb-d35d-e201b303db70",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 33,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "hoon\n",
+            "available\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "n=2116\n",
+        "t=n**0.5\n",
+        "print(t)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "3UAtey-YXPyp",
+        "outputId": "5d47468e-83af-4200-e68c-b8cb3b0d152a"
+      },
+      "execution_count": 3,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "46.0\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "n=1331\n",
+        "cube_root=n**(1/3)\n",
+        "print(cube_root)\n",
+        "y=27\n",
+        "s=y**(1/3)\n",
+        "print(s)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "tFp5rmQ-Xnvt",
+        "outputId": "71195223-a7f3-4398-b499-bd0713983e7e"
+      },
+      "execution_count": 17,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "10.999999999999998\n",
+            "3.0\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
         "n=1\n",
         "sum1=0\n",
         "t1=19\n",
@@ -2601,7 +2767,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 28,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2628,7 +2794,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 30,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2660,7 +2826,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 40,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2691,7 +2857,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 46,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2702,6 +2868,15 @@
           ]
         }
       ]
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "ysffAqOBTaq7"
+      },
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
