--- a/VAISHNAVI.ipynb
+++ b/VAISHNAVI.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPtwm9pPmKB7NeE8rUdvaV9",
+      "authorship_tag": "ABX9TyOSSfn1YmYakPNPaJSbuvBt",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -28,7 +28,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -69,7 +69,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -100,7 +100,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -124,13 +124,131 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
             "mobileno 7302080109\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "marks=int(input(\"marks\"))\n",
+        "if marks>=90:\n",
+        "  print(\"a\")\n",
+        "elif marks>=80:\n",
+        "  print(\"b\")\n",
+        "elif marks>=70:\n",
+        "  print(\"c\")\n",
+        "else:\n",
+        "  print(\"d\")"
+      ],
+      "metadata": {
+        "id": "mQXZetb4SOd5",
+        "outputId": "dd1c9b9c-4536-4128-8ac9-800c638b1cfb",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 2,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "marks90\n",
+            "a\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "x=29\n",
+        "if x%2==0:\n",
+        "  print(\"even\")\n",
+        "else:\n",
+        "  print(\"odd\")"
+      ],
+      "metadata": {
+        "id": "UdhMiMG-Vapb",
+        "outputId": "69d77c8a-c1bc-4f1d-d16e-435fb67af78c",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 4,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "odd\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "a=25\n",
+        "b=30\n",
+        "c=15\n",
+        "if a>=b:\n",
+        "  print(\"a is the largest\")\n",
+        "elif b>=c:\n",
+        "  print(\"b is the largest\")\n",
+        "else:\n",
+        "  print(\"c is the largest\")"
+      ],
+      "metadata": {
+        "id": "6ZqQucMnWTgR",
+        "outputId": "efd8e51e-03ba-4631-89d0-d95bf10dbd40",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 5,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "b is the largest\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "n=int(input(\"enter a number\"))\n",
+        "if n % 7==0:\n",
+        "  print(\"divisible\")\n",
+        "else:\n",
+        "  print(\"indivisible\")"
+      ],
+      "metadata": {
+        "id": "LLmVI21_W4Vw",
+        "outputId": "a47e87c9-6de8-4b6a-d9a1-c886e4c4b5df",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 9,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "enter a number35\n",
+            "divisible\n"
           ]
         }
       ]
