--- a/lAWANIYA.ipynb
+++ b/lAWANIYA.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMhYWN1MApUmOmyeQf47Rrg",
+      "authorship_tag": "ABX9TyNabyRHLUDTd6on8gpeox8f",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -2543,7 +2543,7 @@
         "id": "aypyR2i0U58w",
         "outputId": "41a9ee90-e132-4615-d976-651357ea6410"
       },
-      "execution_count": 23,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2585,7 +2585,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 32,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2619,7 +2619,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 33,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2627,6 +2627,166 @@
           "text": [
             "hoon\n",
             "available\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "name=\"chintu\"\n",
+        "print(name[:-1])\n",
+        "print(name[::-1])#inbuilt function reverse\n",
+        "print(name[::-2])\n",
+        "print(name[-3:])\n",
+        "print(len(name))"
+      ],
+      "metadata": {
+        "id": "EYOubTRIcNab",
+        "outputId": "4fc9c376-7b30-4728-a7ef-15023977a141",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 8,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "chint\n",
+            "utnihc\n",
+            "unh\n",
+            "ntu\n",
+            "6\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "z=\"kaiseho\"\n",
+        "for i in z:\n",
+        " print(i)\n",
+        "print(\"------\")\n",
+        "for i in range(len(z)):\n",
+        " print(i)\n"
+      ],
+      "metadata": {
+        "id": "kNTAcm51cLA8",
+        "outputId": "21845b34-09e2-4aa0-dc6b-fbbb8cee02b8",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 29,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "k\n",
+            "a\n",
+            "i\n",
+            "s\n",
+            "e\n",
+            "h\n",
+            "o\n",
+            "------\n",
+            "0\n",
+            "1\n",
+            "2\n",
+            "3\n",
+            "4\n",
+            "5\n",
+            "6\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "a=\"xyyx\"\n",
+        "print(a[::-1])\n",
+        "if a == a[::-1]:\n",
+        "  print(\"pallin drome\")\n",
+        "else:\n",
+        "  print(\"no pallin drome\")\n",
+        "\n",
+        "\n"
+      ],
+      "metadata": {
+        "id": "0zmC7W-hinOg",
+        "outputId": "5e88c59b-314c-4e84-a804-0bf866e11256",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 32,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "xyyx\n",
+            "pallin drome\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "a=\"zzxxzz\"\n",
+        "b=(a[::-1])\n",
+        "if a==b:\n",
+        "  print(\"pallin drome\")\n",
+        "else:\n",
+        "  print(\"no pallin drome\")"
+      ],
+      "metadata": {
+        "id": "WDQr3pF7kosw",
+        "outputId": "b94a820e-df92-49fd-db0e-d2359ea2276a",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 40,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "pallin drome\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "name=\"xyza\"\n",
+        "rev=\" \"\n",
+        "for b in name:\n",
+        "  rev=b+rev\n",
+        "print(rev)"
+      ],
+      "metadata": {
+        "id": "XLimraSFnRaj",
+        "outputId": "26156b97-63a1-4f27-d20b-d42068b02fe5",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 45,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "azyx \n"
           ]
         }
       ]
@@ -2645,7 +2805,7 @@
         "id": "3UAtey-YXPyp",
         "outputId": "5d47468e-83af-4200-e68c-b8cb3b0d152a"
       },
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2673,7 +2833,7 @@
         "id": "tFp5rmQ-Xnvt",
         "outputId": "71195223-a7f3-4398-b499-bd0713983e7e"
       },
-      "execution_count": 17,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
