--- a/lAWANIYA.ipynb
+++ b/lAWANIYA.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNabyRHLUDTd6on8gpeox8f",
+      "authorship_tag": "ABX9TyMcBU1jrQP6cqOVvtYZifMp",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -972,7 +972,7 @@
         "id": "PjQROfKPCYy3",
         "outputId": "1a6418ee-1ffe-49ec-e7bd-1a49f4434d89"
       },
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2767,26 +2767,62 @@
     {
       "cell_type": "code",
       "source": [
-        "name=\"xyza\"\n",
-        "rev=\" \"\n",
-        "for b in name:\n",
-        "  rev=b+rev\n",
-        "print(rev)"
+        "a=\" i am ok \"\n",
+        "print(a.replace(\"i\",\"u\"))\n",
+        "print(a.endswith(\" \"))\n",
+        "print(a.startswith(\"a\"))\n",
+        "print(a.strip())\n"
       ],
       "metadata": {
-        "id": "XLimraSFnRaj",
-        "outputId": "26156b97-63a1-4f27-d20b-d42068b02fe5",
+        "id": "P60UaEW3wUC1",
+        "outputId": "f6ce4ac6-5f94-41f3-fb3c-8a62e77f8778",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": null,
+      "execution_count": 15,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "azyx \n"
+            " u am ok \n",
+            "True\n",
+            "False\n",
+            "i am ok\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "name=\"xyza\"\n",
+        "rev=\" \"\n",
+        "for b in name:\n",
+        "  rev=b+rev\n",
+        "print(rev)\n",
+        "print(\"_________\")\n",
+        "for b in name:\n",
+        "  rev=rev+b\n",
+        "print(rev)"
+      ],
+      "metadata": {
+        "id": "XLimraSFnRaj",
+        "outputId": "aa065341-f7e5-483a-841d-fdd79ed0214c",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 18,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "azyx \n",
+            "_________\n",
+            "azyx xyza\n"
           ]
         }
       ]
